@@ -157,6 +157,8 @@ gretl_matrix *genr_get_output_matrix (const GENERATOR *genr);
 
 int series_index (const DATASET *dset, const char *varname);
 
+int series_greatest_index (const DATASET *dset, const char *varname);
+
 int current_series_index (const DATASET *dset, const char *vname);
 
 int extract_varname (char *targ, const char *src, int *len);
